--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "date-fns": "^2.29.3",
     "pinia": "^2.0.21",
     "vue": "^3.2.38",
+    "vue-chartjs": "^4.1.2",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
